objects/ffct__Connection__c.object
<CustomObject>
    <description>The connection configuration such as OAuth and authorization information.</description>
    <fields>
        <fullName>ffct__Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Compare_Standard_and_Unmanaged_Objects__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Compare Standard and Unmanaged Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Environment_Type__c</fullName>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer/Production</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__FilterBy_Namespace__c</fullName>
        <inlineHelpText>Add namespace prefix for packages you need to filter for Compare and Deploy Tool. Add namespace prefix seperated by comma(,). For eg:- pse,c2g,ob1</inlineHelpText>
        <label>Filter By Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Host_URL__c</fullName>
        <label>Host URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ffct__Is_TSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is TSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__OAuth_Authorization_Code__c</fullName>
        <label>OAuth Authorization Code</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__OAuth_Code_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OAuth Code Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__OAuth_RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__OAuth_Secret__c</fullName>
        <label>OAuth Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__OAuth_Token__c</fullName>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Template_Id__c</fullName>
        <description>Template Id of the TSO</description>
        <label>Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Unique__c</fullName>
        <externalId>true</externalId>
        <label>Unique Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffct__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ffct__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>